# camdl-watch

./: .gitignore  Makefile  README.md  pyproject.toml
camdl_watch/: __init__.py  __main__.py  app.py  assembly.py  cli.py  compare.py  diagnostics.py  docs.py  grouping.py  highlight.py  ingest.py  plots.py  predictive.py  quantities.py  schema.py  sources.py  state.py  svg_render.py
camdl_watch/api/: __init__.py  app.py  models.py  routes.py
docs/dev/proposals/: 2026-06-25-v2-results-viewer-stack.md
tests/: test_api.py  test_compare.py  test_diagnostics.py  test_docs.py  test_grouping.py  test_ingest.py  test_plots.py  test_predictive.py  test_quantities.py  test_schema.py  test_status.py
tests/fixtures/: make_golden_store.py
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/api/: client.ts  queries.ts  types.ts
web/src/components/: AppHeader.tsx  ComingSoon.tsx  CompareTable.tsx  CompareWorkspace.tsx  DeltaElpdPlot.tsx  DiagnosticsTab.tsx  ExploreWorkspace.tsx  ForestRow.tsx  GlobalHeader.tsx  MarginalDensity.tsx  PairPlot.tsx  PairSettings.tsx  PairTab.tsx  PosteriorTab.tsx  PredictiveTab.tsx  PrequentialPicker.tsx  QuantitiesTab.tsx  RunBar.tsx  RunSelect.tsx  SourceTab.tsx  States.tsx  StatusBadge.tsx  TracesTab.tsx  WarmupControl.tsx
web/src/components/ui/: card.tsx  icons.tsx  select.tsx  slider.tsx  tabs.tsx
web/src/lib/: colors.ts  format.ts  scenario.ts  utils.ts
