[project]
name = "camdl-watch"
version = "0.1.0"
description = "Browser-based results viewer and live diagnostics for camdl fits"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arviz>=0.18",
    "polars>=1.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "pygments>=2.20.0",
    "defopt>=6.4",
    "fastapi>=0.138.1",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
camdl-watch = "camdl_watch.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["camdl_watch"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
